test/compare/sources/errors/bad-reference.go
// errcmp

package main

func main() {
	_ = &0
}
